--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <li><a href="#home">Accueil</a></li>
           <li><a href="#articles">Articles</a></li>
           <li><a href="#about">À propos</a></li>
+          <li><a href="#privacy">Politique de confidentialité</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
